==> Garvet/STM32F103C8_device_control_day_PCH/Core/LoRa_module/LoRa.cpp <==
#include "LoRa.h"
#define MODE_SLEEP 0x00 // Спящий режим
#define MODE_STDBY 0x01 // Режим ожидания
#define MODE_FSTX 0x02  // Синтез частот TX
#define MODE_TX 0x03    // Передача пакета
#define MODE_FSRX 0x04  // Синтез частот RX
#define MODE_RX_CONTINUOUS 0x05 // Непрерывное получение
#define MODE_RX_SINGLE 0x06 // Единичное получение
#define MODE_CAD 0x07 // Обнаружение активности канала
#define RF_PADAC_20DBM_ON  0x07
#define RF_PADAC_20DBM_OFF 0x04
#define DT_SF6 0x0C
#define DT_SF7_12 0x0A
#define DO_SF6 0x05
#define DO_SF7_12 0x03
#define REG_FRF_MSB 0x06
#define REG_FRF_MID 0x07
#define REG_FRF_LSB 0x08
#define LoRa_DIO0_Pin
#define LoRa_DIO1_Pin

void LoRa_class::init(SPI_HandleTypeDef *spi) {
	_reset_pin = LORA_RESET_Pin;
	_reset_port = LORA_RESET_GPIO_Port;
	_nss_pin = LORA_NSS_Pin;
	_nss_port = LORA_NSS_GPIO_Port;
#ifdef LoRa_DIO0_Pin
	_dio0_pin = LORA_DIO0_Pin;
	_dio0_port = LORA_DIO0_GPIO_Port;
#else
	_dio0_pin = 0;
	_dio0_port = 0;
#endif
#ifdef LoRa_DIO1_Pin
	_dio1_pin = LORA_DIO1_Pin;
	_dio1_port = LORA_DIO1_GPIO_Port;
#else
	_dio1_pin = 0;
	_dio1_port = 0;
#endif
#ifdef LoRa_DIO3_Pin
	_dio3_pin = LORA_DIO3_Pin;
	_dio3_port = LORA_DIO3_GPIO_Port;
#else
	_dio3_pin = 0;
	_dio3_port = 0;
#endif
	_spi = spi;
	_frequency = 0;
	_FifoTxBaseAddr = 0;
	_packet_length = 0;
	_reg_field.init(spi, _nss_port, _nss_pin);
}

uint8_t LoRa_class::begin(uint64_t frequency, bool paboost, uint8_t signal_power, uint8_t SF, uint64_t SBW, uint8_t sync_word) {
    uint32_t result = 0;
    uint8_t amt;
    // настройка выходов
    HAL_GPIO_WritePin(_reset_port, _reset_pin, GPIO_PIN_SET);
    // запуск модуля
    HAL_GPIO_WritePin(_reset_port, _reset_pin, GPIO_PIN_RESET);
    HAL_Delay(20);
    HAL_GPIO_WritePin(_reset_port, _reset_pin, GPIO_PIN_SET);
    HAL_Delay(50);
    // проверка версии LoRa-модуля
    amt = field_get(Version, &result);
    if ((result != 0x12) || (amt != 1)) return 2;
    // переход в режим сна/настройки
    if(mode_sleep() != 1) return 3;
    // установка частоты работы модуля
    if(set_frequency(frequency) != 3) return 4;
    // установка адресов памяти TX и RX
    if(field_set(FifoRxBaseAddr, 0x00) != 1) return 5;
    if(field_set(FifoTxBaseAddr, _FifoTxBaseAddr) != 1) return 6;
    // настройка LNA
    if(field_set(LnaBoostHf, 0x03) != 1) return 7;
    // установка автоматического AGC
    if(field_set(LowDataRateOptimize, 0) != 1) return 8;
    if(field_set(AgcAutoOn, 1) != 1) return 9;
    // установкасилы сигнала на 14 дБ
    if(set_TX_power(signal_power, paboost) != 2) return 10;
    // установка силы коэффициента распространения SF
    if(set_spreading_factor(SF) != 3) return 11;
    // установка пропускной способности
    if(set_signal_bandwidth(SBW) != 1) return 12;
    // установка кодового слова 0x4A,  0x34 - LoRaWan
    if(field_set(SyncWord, sync_word) != 1) return 13;
    // включение проверки ошибки пакета
    if(crc_enable() != 1) return 14;
    // переход в режим ожидания
    if(mode_STDBY() != 1) return 15;
    return 0;
}

uint8_t LoRa_class::mode_RX_continuous(bool set_dio) {
    if (set_dio & ((_dio0_pin != 0) || (_dio1_pin != 0))) {
        field_set(Dio0Mapping, 0, false);
        field_set(Dio1Mapping, 0);
    }
    return set_mode(MODE_RX_CONTINUOUS);
}

uint8_t LoRa_class::mode_RX_single(bool set_dio) {
    if (set_dio & ((_dio0_pin != 0) || (_dio1_pin != 0))) {
        field_set(Dio0Mapping, 0, false);
        field_set(Dio1Mapping, 0);
    }
    return set_mode(MODE_RX_SINGLE);
}

uint8_t LoRa_class::mode_CAD(bool set_dio) {
    if (set_dio & ((_dio0_pin != 0) || (_dio1_pin != 0))) {
        field_set(Dio0Mapping, 2, false);
        field_set(Dio1Mapping, 2);
    }
    return set_mode(MODE_CAD);
}

class LoRa_packet LoRa_class::receiver_packet(uint8_t count, ulong wait, bool rssi, bool snr) {
    class LoRa_packet send_packet;
    Address_field fields[3] = {RxTimeout, RxDone, PayloadCrcError};
    Address_field flags[3] = {RxDone, ValidHeader, PayloadCrcError};
    if(count <= 1) {
        if(count == 1)
            mode_RX_single();
        volatile uint8_t rx_done, rx_timeout, crc_err;
        uint8_t amt;
        bool signal = false;
        ulong time, start_time, read_time;
        volatile int pin_done, pin_timeout, pin_crc_err;
        uint32_t values[3] = {0, 0, 0};
        rx_done = rx_timeout = crc_err = 0;
        if(wait == 0)
            time = 0;
        else
            time = HAL_GetTick();
        for(start_time = time, read_time = time; (wait == 0) || (HAL_GetTick() - time < wait);) {
            // Считывание каждые 10 мс.
            if((wait == 0) || (HAL_GetTick() - read_time > 10U)) {
                // Если работают DIO выходы, то при HIGH хотя бы на одном из них, пускаем signal
            	if ((_dio0_pin != 0) && (_dio1_pin != 0)) {
                	pin_done = HAL_GPIO_ReadPin(_dio0_port, _dio0_pin);
                	pin_timeout = HAL_GPIO_ReadPin(_dio1_port, _dio1_pin);
                    if (_dio3_pin != 0) {
                    	pin_crc_err = HAL_GPIO_ReadPin(_dio3_port, _dio3_pin);
                    }
                    else {
                        pin_crc_err = GPIO_PIN_RESET;
                    }
                    if ((pin_done == GPIO_PIN_SET) || (pin_timeout == GPIO_PIN_SET) || (pin_crc_err == GPIO_PIN_SET)) {
                        signal = true;
                    }
            	}
                // Если неработают DIO выходы, был signal или превышено время ожидания
                if (((count == 0) && (wait == 0)) || (_dio0_pin == 0) || (_dio1_pin == 0) || (HAL_GetTick() - start_time > 2000) || signal) {
                    amt = field_get(fields, values, 3, true);
                    if(amt == 3) {
                        rx_timeout = values[0];
                        rx_done = values[1];
                        crc_err = values[2];
                    }
                    if(signal) {
                    	if(rx_timeout + rx_done + crc_err != 0) {
                    		work_read_flag[0]++; // +
                    	}
                    	else {
                    		work_read_flag[1]++; // -
                    	}
                    }
                    else {
                    	if(rx_timeout + rx_done + crc_err != 0) {
                    		work_read_flag[2]++; // -
                    	}
                    	else {
                    		work_read_flag[3]++; // +
                    	}
                    }
                }
                if(rx_done != 0) {
                    break;
                }
                if(rx_timeout != 0) {
                    _reg_field.clear_flags(RxTimeout);
                    mode_RX_single(false);
                    rx_done = rx_timeout = crc_err = 0;
                    signal = false;
                    if(wait != 0)
                        start_time = HAL_GetTick();
                }
                if(wait == 0) {
                    break;
                }
            }
        }
        if((rx_done > 0) /*&& (crc_err == 0)*/) {
            _reg_field.clear_flags(RxDone);
            _reg_field.clear_flags(RxTimeout);
            send_packet = read_packet_data(crc_err, rssi, snr);
        }
        else {
            field_get(fields, values, 3, true);
            _reg_field.clear_flags(flags, 3);
            // send_packet = LoRa_packet();
        }
        if(wait != 0)
            mode_sleep();
    }
    else {
        for(int i = 0; i < count; ++i) {

        }
    }
    return send_packet;
}

bool LoRa_class::packet_end(uint32_t wait, bool sleep) {
    mode_TX();
    bool result = false;
    if(wait > 0) {
        uint32_t tx_done = 0;
        bool signal = false;
        uint32_t time, start_time, read_time;
        int pin_done;
        tx_done = 0;
        for(time = HAL_GetTick(), start_time = time, read_time = time; HAL_GetTick() - time < wait;) {
            // Считывание каждые 10 мс.
            if(HAL_GetTick() - read_time > 10) {
                // Если работают DIO выходы, то при HIGH хотя бы на одном из них, пускаем signal
                if (_dio0_pin != 0) {
                	pin_done = HAL_GPIO_ReadPin(_dio0_port, _dio0_pin);
                    if (pin_done == GPIO_PIN_SET) {
                        signal = true;
                    }
                }
                // Если неработают DIO выходы, был signal или превышено время ожидания
                if ((_dio0_pin == 0) || (HAL_GetTick() - start_time > 2000) || signal) {
                    field_get(TxDone, &tx_done, true);
                }
                if(tx_done != 0) {
                    break;
                }
            }
        }
        if(sleep && (tx_done != 0)) {
            mode_sleep();
        }
    }
    return result;
}
