==> Garvet/Grow_automatic/Group_control_module/lib/LoRa/LoRa.cpp <==
#include "LoRa.h"
#define MODE_SLEEP 0x00 // Спящий режим
#define MODE_STDBY 0x01 // Режим ожидания
#define MODE_FSTX 0x02  // Синтез частот TX
#define MODE_TX 0x03    // Передача пакета
#define MODE_FSRX 0x04  // Синтез частот RX
#define MODE_RX_CONTINUOUS 0x05 // Непрерывное получение
#define MODE_RX_SINGLE 0x06 // Единичное получение
#define MODE_CAD 0x07 // Обнаружение активности канала
#define RF_PADAC_20DBM_ON  0x07
#define RF_PADAC_20DBM_OFF 0x04
#define DT_SF6 0x0C
#define DT_SF7_12 0x0A
#define DO_SF6 0x05
#define DO_SF7_12 0x03
#define REG_FRF_MSB 0x06
#define REG_FRF_MID 0x07
#define REG_FRF_LSB 0x08

bool LoRa::init(uint8_t pin_reset, uint8_t spi_bus, uint8_t spi_nss, uint8_t pin_dio0, uint8_t pin_dio1, uint8_t pin_dio3) {
    if((spi_bus != HSPI) && (spi_bus != VSPI) && (spi_bus != HELTEC_LORA)) {
        _init = false;
        return true;
    }
    if(spi_bus == HELTEC_LORA)
        _spi = new SPIClass(VSPI);
    else
        _spi = new SPIClass(spi_bus);
    _setting = new SPISettings(2E6, MSBFIRST, SPI_MODE0);
    // _setting = new SPISettings(8E6, MSBFIRST, SPI_MODE0);
    uint8_t sclk, miso, mosi;
    if(spi_bus == VSPI) {
        // sclk = 5; miso = 19; mosi = 27; // SS = 18;
        sclk = 18; miso = 19; mosi = 23; // SS = 5;
        if(spi_nss == 0)
            spi_nss = 5;
    }
    else if(spi_bus == HSPI) {
        sclk = 14; miso = 12; mosi = 13; // SS = 15;
        if(spi_nss == 0)
            spi_nss = 15;
    }
    else {
        sclk = 5; miso = 19; mosi = 27; spi_nss = 18;
    }
    _spi->begin(sclk, miso, mosi, spi_nss);
    _reg_field.init(_spi, _setting, spi_nss);
    _nss = spi_nss;
    _reset = pin_reset;
    _dio0 = pin_dio0;
    _dio1 = pin_dio1;
    _dio3 = pin_dio3;
	_FifoTxBaseAddr = 0;

    if (_dio0 != 0)
        pinMode(_dio0, INPUT);
    if (_dio1 != 0)
        pinMode(_dio1, INPUT);
    if (_dio3 != 0)
        pinMode(_dio3, INPUT);
        
    _init = true;
    return false;
}

uint8_t LoRa::begin(ulong frequency, bool paboost, uint8_t signal_power, uint8_t SF, ulong SBW, uint8_t sync_word) {
    if(!_init) return 1;
    uint32_t result = 0;
    uint8_t amt;
    // настройка выходов
    pinMode(_reset, OUTPUT);
    digitalWrite(_reset, HIGH);

    // запуск модуля
    digitalWrite(_reset, LOW);
    delay(20);
    digitalWrite(_reset, HIGH);
    delay(50);
    
    // проверка версии LoRa-модуля
    amt = field_get(Version, &result);
    if ((result != 0x12) || (amt != 1)) return 2;
    // переход в режим сна/настройки
    if(mode_sleep() != 1) return 3;
    // установка частоты работы модуля
    if(set_frequency(frequency) != 3) return 4;
    // установка адресов памяти TX и RX
    if(field_set(FifoRxBaseAddr, 0x00) != 1) return 5;
    if(field_set(FifoTxBaseAddr, _FifoTxBaseAddr) != 1) return 6;
    // настройка LNA
    if(field_set(LnaBoostHf, 0x03) != 1) return 7;
    // установка автоматического AGC
    if(field_set(LowDataRateOptimize, 0) != 1) return 8;
    if(field_set(AgcAutoOn, 1) != 1) return 9;
    // установкасилы сигнала на 14 дБ
    if(set_TX_power(signal_power, paboost) != 2) return 10;
    // установка силы коэффициента распространения SF
    if(set_spreading_factor(SF) != 3) return 11;
    // установка пропускной способности
    if(set_signal_bandwidth(SBW) != 1) return 12;
    // установка кодового слова 0x4A,  0x34 - LoRaWan
    if(field_set(SyncWord, sync_word) != 1) return 13;
    // включение проверки ошибки пакета
    if(crc_enable() != 1) return 14;
    // переход в режим ожидания
    if(mode_STDBY() != 1) return 15;
    return 0;
}

uint8_t LoRa::mode_RX_continuous(bool set_dio) {
    // if (_dio0 != 0)
    //     field_set(Dio0Mapping, 0);
    // if (_dio1 != 0)
    //     field_set(Dio1Mapping, 0);
    if (set_dio & ((_dio0 != 0) || (_dio1 != 0))) {
        field_set(Dio0Mapping, 0, false);
        field_set(Dio1Mapping, 0);
    }
    return set_mode(MODE_RX_CONTINUOUS);
}

uint8_t LoRa::mode_RX_single(bool set_dio) {
    if (set_dio & ((_dio0 != 0) || (_dio1 != 0))) {
        field_set(Dio0Mapping, 0, false);
        field_set(Dio1Mapping, 0);
    }
    return set_mode(MODE_RX_SINGLE);
}

uint8_t LoRa::mode_CAD(bool set_dio) {
    // if (_dio0 != 0)
    //     field_set(Dio0Mapping, 2);
    // if (_dio1 != 0)
    //     field_set(Dio1Mapping, 2);
    if (set_dio & ((_dio0 != 0) || (_dio1 != 0))) {
        field_set(Dio0Mapping, 2, false);
        field_set(Dio1Mapping, 2);
    }
    return set_mode(MODE_CAD);
}

class LoRa_packet LoRa::receiver_packet(uint8_t count, ulong wait, bool rssi, bool snr) {
    class LoRa_packet send_packet;
    Address_field fields[3] = {RxTimeout, RxDone, PayloadCrcError};
    Address_field flags[3] = {RxDone, ValidHeader, PayloadCrcError};
    if(count <= 1) {
        if(count == 1)
            mode_RX_single();
        uint8_t rx_done, rx_timeout, crc_err;
        uint8_t amt;
        bool signal = false;
        ulong time, start_time, read_time;
        int pin_done, pin_timeout, pin_crc_err;
        uint32_t values[3] = {0, 0, 0};
        rx_done = rx_timeout = crc_err = 0;
        if(wait == 0)
            time = 0;
        else
            time = millis();
        for(start_time = time, read_time = time; (wait == 0) || (millis() - time < wait);) {
            // Считывание каждые 10 мс.
            if((wait == 0) || (millis() - read_time > 10U)) {
                // Если работают DIO выходы, то при HIGH хотя бы на одном из них, пускаем signal
                if ((_dio0 != 0) && (_dio1 != 0)) {
                    pin_done = digitalRead(_dio0);
                    pin_timeout = digitalRead(_dio1);
                    if (_dio3 != 0) {
                        pin_crc_err = digitalRead(_dio3);
                    }
                    else {
                        pin_crc_err = LOW;
                    }
                    if ((pin_done == HIGH) || (pin_timeout == HIGH) || (pin_crc_err == HIGH)) {
                        signal = true;
                    }
                }
                // Если неработают DIO выходы, был signal или превышено время ожидания
                if (((count == 0) && (wait == 0)) || (_dio0 == 0) || (_dio1 == 0) || (millis() - start_time > 2000) || signal) {
                    amt = field_get(fields, values, 3, true);
                    if(amt == 3) {
                        rx_timeout = values[0];
                        rx_done = values[1];
                        crc_err = values[2];
                    }
                }
                if(rx_done != 0) {
                    break;
                }
                if(rx_timeout != 0) {
                    _reg_field.clear_flags(RxTimeout);
                    mode_RX_single(false);
                    rx_done = rx_timeout = crc_err = 0;
                    signal = false;
                    if(wait != 0)
                        start_time = millis();
                }
                if(wait == 0) {
                    break;
                }
            }
        }
        if((rx_done > 0) /*&& (crc_err == 0)*/) {
            _reg_field.clear_flags(RxDone);
            _reg_field.clear_flags(RxTimeout);
            send_packet = read_packet_data(crc_err, rssi, snr);
        }
        else {
            field_get(fields, values, 3, true);
            _reg_field.clear_flags(flags, 3);
            // send_packet = LoRa_packet();
        }
        if(wait != 0)
            mode_sleep();
    }
    else {
        for(int i = 0; i < count; ++i) {
            
        }
    }
    return send_packet;
}

bool LoRa::packet_end(ulong wait, bool sleep) {
    // _reg_field.clear_flags(TxDone);
    mode_TX();
    bool result = false;
    if(wait > 0) {
        uint32_t tx_done = 0;
        bool signal = false;
        ulong time, start_time, read_time;
        int pin_done;
        tx_done = 0;
        for(time = millis(), start_time = time, read_time = time; millis() - time < wait;) {
            // Считывание каждые 10 мс.
            if(millis() - read_time > 10) {
                // Если работают DIO выходы, то при HIGH хотя бы на одном из них, пускаем signal
                if (_dio0 != 0) {
                    pin_done = digitalRead(_dio0);
                    if (pin_done == HIGH) {
                        signal = true;
                    }
                }
                // Если неработают DIO выходы, был signal или превышено время ожидания
                if ((_dio0 == 0) || (millis() - start_time > 2000) || signal) {
                    field_get(TxDone, &tx_done, true);
                }
                if(tx_done != 0) {
                    break;
                }
            }
        }
        if(sleep && (tx_done != 0)) {
            mode_sleep();
        }
    }
    return result;
}
